# ssh-mcp

./: .env.example  CLAUDE.md  Cargo.toml  README.md  com.farchanjo.ssh-mcp.plist
.github/workflows/: docker.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  FLOWS.md
src/: main.rs
src/mcp/: async_command.rs  client.rs  commands.rs  config.rs  error.rs  forward.rs  mod.rs  schema.rs  session.rs  shell.rs  ssh_commands.rs  types.rs
src/mcp/auth/: agent.rs  chain.rs  key.rs  mod.rs  password.rs  traits.rs
src/mcp/message/: builder.rs  mod.rs
src/mcp/storage/: command.rs  mod.rs  session.rs  shell.rs  traits.rs
