[package]
name = "ssh-mcp"
version = "1.0.0"
edition = "2024"
description = "SSH Model Context Protocol Server Integration"
authors = ["mingyang91 <mingyang91@qq.com>"]
default-run = "ssh-mcp"
license = "MIT"
repository = "https://github.com/mingyang91/ssh-mcp"

[[bin]]
name = "ssh-mcp-stdio"
path = "src/bin/ssh_mcp_stdio.rs"

[[bin]]
name = "ssh-mcp"
path = "src/main.rs"

[lib]
name = "ssh_mcp"
path = "src/lib.rs"

# Dependencies for SSH features and stateful connections
[dependencies]
# Web and MCP
poem = "3.1"                                                                # Match version used by poem-mcpserver
poem-mcpserver = { version = "0.2.9", features = ["streamable-http"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }

# SSH client (async)
russh = "0.55"
async-trait = "0.1"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"                                   # Required by poem-mcpserver

# Utilities
backon = "1"                                                            # Retry with backoff
chrono = "0.4"                                                          # For timestamps
dotenv = "0.15"                                                         # For environment variables
thiserror = "1.0"                                                       # Error handling
tracing = "0.1"                                                         # Tracing for debugging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }     # Tracing implementation with env filter
uuid = { version = "1.16", features = ["v4", "serde"] }                 # For unique identifiers
once_cell = "1.21"                                                      # For lazy static initialization

[features]
# Default features
default = ["port_forward"]

# Optional features
port_forward = [] # Port forwarding support
